ipc/ipdl/test/ipdl/ok/PnoRedeclCrossMessage.ipdl
[ChildProc=any]
protocol PnoRedeclCrossMessage {

    // each message has its own scope for param/return names

child:
    async Msg1(int f);
    async Msg2(int f);

};
