ipc/ipdl/test/ipdl/error/ExtendedAttrInvalidNestedValue.ipdl
//error: invalid value for attribute `Nested', expected one of: not, inside_sync, inside_cpow

protocol ExtendedAttrInvalidNestedValue {
child:
  [Nested=invalid] async __delete__();
};
